# page

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  PKGBUILD  README.md  build.sh  build_shell_completions.rs  build_shell_completions_and_man_pages.rs
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: rust_build.yml
ci/: before_deploy.sh
src/: cli.rs  common.rs  connection.rs  context.rs  neovim.rs  nvim.rs  page-term-agent.rs  page.rs  page_agent.rs  pty-agent.rs  util.rs
src/pager/: cli.rs  context.rs  main.rs  neovim.rs
src/picker/: cli.rs  context.rs  main.rs  neovim.rs
