[package]
name = "page"
version = "4.0.0"
authors = ["160R <160R@protonmail.com>"]
description = "Pager powered by neovim and inspired by neovim-remote"
repository = "https://github.com/I60R/page"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.58.0"
build = "build_shell_completions.rs"

[dependencies]
once_cell = "1.13.0"
futures = "0.3.21"
async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["compat"] }
parity-tokio-ipc = "0.9.0"
nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
atty = "0.2.14"
shell-words = "1.1.0"
term_size = "0.3.2"
log = "0.4.17"
fern = "0.6.1"
indoc = "1.0.6"
walkdir = "2.0.0"
clap = { version = "4.0.22", features = ["wrap_help", "derive", "env"] }

[build-dependencies]
once_cell = "1.13.0"
clap = { version = "4.0.22", features = ["derive", "env"] }
clap_complete = "4.0.5"

[profile.release]
lto = true

[lib]
name = "connection"
path = "src/connection.rs"

[[bin]]
name = "page"
path = "src/pager/main.rs"

[[bin]]
name = "nv"
path = "src/picker/main.rs"
