[package]
name = "page"
version = "4.5.0"
authors = ["160R <160R@protonmail.com>"]
description = "Pager powered by neovim and inspired by neovim-remote"
repository = "https://github.com/I60R/page"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"
build = "build_shell_completions.rs"


[dependencies]
term_size = { version = "0.3.2", optional = true }
walkdir = { version = "2.3.2", optional = true }

once_cell = "1.16.0"
futures = "0.3.25"
async-trait = "0.1.60"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
parity-tokio-ipc = "0.9.0"
nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
atty = "0.2.14"
shell-words = "1.1.0"
log = "0.4.17"
fern = "0.6.1"
indoc = "1.0.8"
clap = { version = "4.0.29", features = ["wrap_help", "derive", "env"] }


[build-dependencies]
once_cell = "1.16.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
clap_complete = "4.0.6"


[profile.release]
lto = true


[features]
default = ["pager", "picker"]

pager = ["dep:term_size"]
picker = ["dep:walkdir"]


[lib]
name = "connection"
path = "src/connection.rs"


[[bin]]
name = "page"
path = "src/pager/main.rs"
required-features = ["pager"]

[[bin]]
name = "nv"
path = "src/picker/main.rs"
required-features = ["picker"]


